--- a/public/css/style.css
+++ b/public/css/style.css
@@ -152,7 +152,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    background: rgba(0, 0, 0, .75);
+    
     z-index: 1;
 }
 
@@ -172,7 +172,7 @@
 @media (max-width: 768px) {
     #header-carousel .carousel-item {
         position: relative;
-        min-height: 450px;
+        height: 450px;
     }
     
     #header-carousel .carousel-item img {
