--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -10,20 +10,20 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="courses.html" class="nav-item nav-link">Courses</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">New Cars</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="appointment.html" class="dropdown-item">Appointment</a>
-                        <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="feature.html" class="dropdown-item">Explore</a>
+                        <a href="appointment.html" class="dropdown-item">Electric</a>
+                        <a href="team.html" class="dropdown-item">Upcoming</a>
+                        <a href="testimonial.html" class="dropdown-item">Popular</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
+                
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Get Started<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="" class="btn btn-secondary py-4 px-lg-4">Register<i class="fa fa-user-plus ms-3"></i></a>
+            <a href="" class="btn btn-primary py-4 px-lg-4">Login<i class="fa fa-user ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
