--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,50 +2,30 @@
 
 <%- include('./includes/navbar.ejs') %>
 
+<%- include('./includes/carousel.ejs') %>
+
 
 <!-- Facts Start -->
 <div class="container-fluid facts py-5 pt-lg-0">
     <div class="container py-5 pt-lg-0">
         <div class="row gx-0">
-            <div class="col-lg-4 wow fadeIn" data-wow-delay="0.1s">
+            <div class="col-lg-12 wow fadeIn" data-wow-delay="0.1s">
                 <div class="bg-white shadow d-flex align-items-center h-100 p-4" style="min-height: 150px;">
-                    <div class="d-flex">
-                        <div class="flex-shrink-0 btn-lg-square bg-primary">
-                            <i class="fa fa-car text-white"></i>
+                    <form method="get" class="custom-form mb-lg-0 w-100" role="search">
+                        <div class="input-group input-group-lg">
+                            <span class="input-group-text" id="basic-addon1">
+                                <i class="fa fa-search"></i>
+                            </span>
+
+                            <input name="keyword" type="search" class="form-control" id="keyword" placeholder="Search cars" aria-label="Search cars">
+
+                            <button type="submit" class="btn btn-primary">Search</button>
                         </div>
-                        <div class="ps-4">
-                            <h5>Easy Driving Learn </h5>
-                            <span>Clita erat ipsum lorem sit sed stet duo justo erat amet</span>
-                        </div>
-                    </div>
+                    </form>
                 </div>
             </div>
-            <div class="col-lg-4 wow fadeIn" data-wow-delay="0.3s">
-                <div class="bg-white shadow d-flex align-items-center h-100 p-4" style="min-height: 150px;">
-                    <div class="d-flex">
-                        <div class="flex-shrink-0 btn-lg-square bg-primary">
-                            <i class="fa fa-users text-white"></i>
-                        </div>
-                        <div class="ps-4">
-                            <h5>National Instructor</h5>
-                            <span>Clita erat ipsum lorem sit sed stet duo justo erat amet</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s">
-                <div class="bg-white shadow d-flex align-items-center h-100 p-4" style="min-height: 150px;">
-                    <div class="d-flex">
-                        <div class="flex-shrink-0 btn-lg-square bg-primary">
-                            <i class="fa fa-file-alt text-white"></i>
-                        </div>
-                        <div class="ps-4">
-                            <h5>Get licence</h5>
-                            <span>Clita erat ipsum lorem sit sed stet duo justo erat amet</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
+            
         </div>
     </div>
 </div>
