--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop - <%= pageTitle %></title>
+    <title>CarsInd - <%= pageTitle %></title>
     
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
