Fixed dark theme mode for admin

--- a/views/includes/admin/footer.ejs
+++ b/views/includes/admin/footer.ejs
@@ -15,6 +15,7 @@
         </div>
       </div>
     <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/chart.min.js"></script>
     <script src="/js/feather.min.js"></script>
     <script src="/js/admin-script.js"></script>
 </body>
