Created brands model, page, menu in admin

--- a/views/includes/admin/header.ejs
+++ b/views/includes/admin/header.ejs
@@ -9,6 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/css/bootstrap-icons.min.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/admin.style.min.css" />
 </head>
 <body>
