--- a/views/includes/admin/sidebar.ejs
+++ b/views/includes/admin/sidebar.ejs
@@ -23,18 +23,18 @@
                 </li>
                 <li>
                     <a class="show-cat-btn" href="##">
-                        <span class="icon bi bi-file-earmark-post" aria-hidden="true"></span>Posts
+                        <span class="icon fa-solid fa-car-side" aria-hidden="true"></span>Brands
                         <span class="category__btn transparent-btn" title="Open list">
                             <span class="sr-only">Open list</span>
-                            <span class="icon arrow-down" aria-hidden="true"></span>
+                            <span class=" bi bi-arrow-down-circle-fill" aria-hidden="true"></span>
                         </span>
                     </a>
                     <ul class="cat-sub-menu">
                         <li>
-                            <a href="posts.html">All Posts</a>
+                            <a href="/admin/brands">All Brands</a>
                         </li>
                         <li>
-                            <a href="new-post.html">Add new post</a>
+                            <a href="new-post.html">Add New Brand</a>
                         </li>
                     </ul>
                 </li>
