--- a/views/admin/brands.ejs
+++ b/views/admin/brands.ejs
@@ -26,7 +26,7 @@
                         <% if(brands.length > 0){ %>
                             <% for(let brand of brands) { %>
                                 <tr class="align-middle">
-                                    <td><%= quiz._id %></td>
+                                    <td><%= brand._id %></td>
                                     <td><a href="/admin/brand/<%= brand._id %>"><%= brand.title %></a></td>
                                     <td><%= brand.logo %></td>
                                     <td><%= brand.description %></td>
