--- a/views/includes/admin/sidebar.ejs
+++ b/views/includes/admin/sidebar.ejs
@@ -7,7 +7,7 @@
                 <span class="icon bi bi-car-front-fill" aria-hidden="true"></span>
                 <div class="logo-text">
                     <span class="logo-title">CarsInd</span>
-                    <span class="logo-subtitle">Dashboard</span>
+                    <span class="logo-subtitle"><%= pageTitle %></span>
                 </div>
 
             </a>
@@ -19,10 +19,10 @@
         <div class="sidebar-body">
             <ul class="sidebar-body-menu">
                 <li>
-                    <a class="active" href="/admin/dashboard"><i class="icon bi bi-house-fill" aria-hidden="true"></i> Dashboard</a>
+                    <a class="<%= (path === '/dashboard' ? 'active' : '') %>" href="/admin/dashboard"><i class="icon bi bi-house-fill" aria-hidden="true"></i> Dashboard</a>
                 </li>
                 <li>
-                    <a class="show-cat-btn" href="##">
+                    <a class="show-cat-btn <%= (path === '/brands' ? 'active' : '') %>" href="##">
                         <span class="icon fa-solid fa-car-side" aria-hidden="true"></span>Brands
                         <span class="category__btn transparent-btn" title="Open list">
                             <span class="sr-only">Open list</span>
@@ -34,7 +34,7 @@
                             <a href="/admin/brands">All Brands</a>
                         </li>
                         <li>
-                            <a href="new-post.html">Add New Brand</a>
+                            <a href="/admin/brand/add-brand">Add New Brand</a>
                         </li>
                     </ul>
                 </li>
@@ -134,7 +134,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="/admin/site-settings"><span class="icon bi bi-gear-fill" aria-hidden="true"></span>Settings</a>
+                    <a class="<%= (path === '/site-settings' ? 'active' : '') %>" href="/admin/site-settings"><span class="icon bi bi-gear-fill" aria-hidden="true"></span>Settings</a>
                 </li>
             </ul>
         </div>
@@ -142,7 +142,7 @@
     <div class="sidebar-footer">
         <a href="##" class="sidebar-user">
             <span class="sidebar-user-img">
-                <picture><source srcset="../img/avatar/avatar-illustrated-01.webp" type="image/webp"><img src="../img/avatar/avatar-illustrated-01.png" alt="User name"></picture>
+                <picture><source srcset="../../img/avatar/avatar-illustrated-01.webp" type="image/webp"><img src="../img/avatar/avatar-illustrated-01.png" alt="User name"></picture>
             </span>
             <div class="sidebar-user-info">
                 <span class="sidebar-user__title">Nafisa Sh.</span>
