--- a/views/admin/brands.ejs
+++ b/views/admin/brands.ejs
@@ -31,9 +31,9 @@
                                     <td><%= brand.logo %></td>
                                     <td><%= brand.description %></td>
                                     <td>
-                                        <a class="edit-icon" href="/admin/edit-brand/<%= brand._id %>" aria-label="edit brand"><i class="bi bi-pencil-square"></i></a>
+                                        <a class="table-icon edit-icon" href="/admin/brand/edit-brand/<%= brand._id %>" aria-label="edit brand"><i class="bi bi-pencil-square"></i></a>
 
-                                        <a class="delete-icon" href="/admin/delete-brand/<%= brand._id %>" aria-label="delete brand">
+                                        <a class="table-icon delete-icon" href="/admin/brand/delete-brand/<%= brand._id %>" aria-label="delete brand">
                                             <i class="bi bi-trash3-fill"></i>
                                         </a>
                                     </td>
