--- a/views/includes/admin/sidebar.ejs
+++ b/views/includes/admin/sidebar.ejs
@@ -142,7 +142,7 @@
     <div class="sidebar-footer">
         <a href="##" class="sidebar-user">
             <span class="sidebar-user-img">
-                <picture><source srcset="../../img/avatar/avatar-illustrated-01.webp" type="image/webp"><img src="../img/avatar/avatar-illustrated-01.png" alt="User name"></picture>
+                <picture><source srcset="/img/avatar/avatar-illustrated-01.webp" type="image/webp"><img src="/img/avatar/avatar-illustrated-01.png" alt="User name"></picture>
             </span>
             <div class="sidebar-user-info">
                 <span class="sidebar-user__title">Nafisa Sh.</span>
