--- a/views/includes/admin/navigation.ejs
+++ b/views/includes/admin/navigation.ejs
@@ -31,7 +31,7 @@
         <div class="notification-wrapper">
           <button class="gray-circle-btn dropdown-btn" title="To messages" type="button">
             <span class="sr-only">To messages</span>
-            <span class="icon notification active" aria-hidden="true"></span>
+            <span class="icon bi bi-bell active" aria-hidden="true"></span>
           </button>
           <ul class="users-item-dropdown notification-dropdown dropdown">
             <li>
