Created user model

--- a/views/admin/brands.ejs
+++ b/views/admin/brands.ejs
@@ -8,7 +8,17 @@
     <!-- ! Main -->
     <main class="main users chart-page" id="skip-target">
         <div class="container">
-          <h2 class="main-title">Brands</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <h2 class="main-title">Brands</h2>
+                </div>
+                <div class="col-md-6 d-flex flex-row-reverse">
+                    <div>
+                        <a href="/admin/brand/add-brand" class="btn btn-success">Add <i class="bi bi-plus"></i></a>
+                    </div>
+                </div>
+            </div>    
+          
 
           <div class="row">
             <div class="col-md-12">
