--- a/views/includes/admin/sidebar.ejs
+++ b/views/includes/admin/sidebar.ejs
@@ -109,7 +109,7 @@
                             <a href="/admin/users">All Users</a>
                         </li>
                         <li>
-                            <a href="users-02.html">Users-02</a>
+                            <a href="/admin/users/add-user">Add User</a>
                         </li>
                     </ul>
                 </li>
