Added update method

--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -43,9 +43,9 @@
                                     <td><%= user.phone %></td>
                                     <td><%= user.password %></td>
                                     <td>
-                                        <a class="table-icon edit-icon" href="/admin/user/edit-user/<%= user._id %>" aria-label="edit user"><i class="bi bi-pencil-square"></i></a>
+                                        <a class="table-icon edit-icon" href="/admin/users/edit-user/<%= user._id %>" aria-label="edit user"><i class="bi bi-pencil-square"></i></a>
 
-                                        <a class="table-icon delete-icon" href="/admin/user/delete-user/<%= user._id %>" aria-label="delete user">
+                                        <a class="table-icon delete-icon" href="/admin/users/delete-user/<%= user._id %>" aria-label="delete user">
                                             <i class="bi bi-trash3-fill"></i>
                                         </a>
                                     </td>
