--- a/views/includes/admin/sidebar.ejs
+++ b/views/includes/admin/sidebar.ejs
@@ -101,7 +101,7 @@
                         <span class="icon bi bi-person-fill" aria-hidden="true"></span>Users
                         <span class="category__btn transparent-btn" title="Open list">
                             <span class="sr-only">Open list</span>
-                            <span class="icon arrow-down" aria-hidden="true"></span>
+                            <span class="bi bi-arrow-down-circle-fill" aria-hidden="true"></span>
                         </span>
                     </a>
                     <ul class="cat-sub-menu">
